# Image-Processing

./: README.md
 Optical Flow/job4_12.16/: deriv.c  filter.c
 Optical Flow/workspace/: Readme  algo.c  algo.h  bitmap.c  bitmap.h  bitmap.h.gch  main  main.c  tmp
RGB To HSV/no_opencv/: Makefile  Readme  ap_bmp.c  ap_bmp.h  main  main.c  rgb2hsv.c  rgb2hsv.h  tmp
RGB To HSV/use_opencv/: Makefile  RGB2HSV.c  err  main
Smoothed image by fixed point/: filter.c  src1.c
Smoothed image by fixed point/job6_1.26/Fixed/Fixed/: FixedPoint.ncb  FixedPoint.sln
Smoothed image by fixed point/job6_1.26/Fixed/Fixed/FixedPoint/: FixedPoint.vcproj  ReadMe.txt  fixed.cpp  fixed.h
Smoothed image by fixed point/job6_1.26/Fixed/Fixed/Test/: ReadMe.txt  Test.cpp  Test.vcproj
Smoothed image by fixed point/job6_1.26/fpmath/fpmath/: CMakeLists.txt  copying.txt
Smoothed image by fixed point/job6_1.26/fpmath/fpmath/doc/: CMakeLists.txt  doxy.config.in
Smoothed image by fixed point/job6_1.26/fpmath/fpmath/doc/src/: mainpage.txt
Smoothed image by fixed point/job6_1.26/fpmath/fpmath/test/: CMakeLists.txt
Smoothed image by fixed point/job6_1.26/fpmath/fpmath/test/benchmark/: CMakeLists.txt  benchmark.cpp  intrin.h  intrin_x86.h
Smoothed image by fixed point/job6_1.26/fpmath/fpmath/test/unit_test/: CMakeLists.txt  fixed_point.cpp  runner.cpp
Sobel/job2_12.9/: img_filter.c  img_filter.h
Sobel/no_opencv/: Makefile  Readme  ap_bmp.c  ap_bmp.h  main  main.c  rgb2gray.c  rgb2gray.h  sobel.h
Sobel/use_opencv/: Makefile  keyword  main  main.c
Sor/: sor.c
Sor/A1/: A1  Makefile  deriv.c  deriv.h  filter.c  filter.h  fmg.c  fmg.h  hs.c  hs.h  imageio.c  imageio.h  sor.c  sor.h  test.c  util.c  util.h  writeflow.c  writeflow.h
Sor/A1/data/: frame10.pgm  frame11.pgm
Sor/A1/result/: color_flow  flow_clouds6.flo  flow_clouds6.pcm  flow_clouds6.pgm
Sor/VarFlow/: Makefile  ProfTimer.h  Readme.txt  VarFlow.cpp  example.cpp  main
Sor/workspace/: Makefile  algo.c  algo.h  bitmap.c  bitmap.h  data  main  main.c  nohup.out  src2  tmp1  tmp2
Sor/workspace/opencv/: Makefile  flow.c  flow.h  main  main.c
image_smooth/image_smooth/: Makefile  Readme  ap_bmp.c  ap_bmp.h.gch  data.f  data.i  filter.c  filter.h  filter.old.c  main  main.c  maskdata  tmp
